--- a/public/css/pages/authentication.css
+++ b/public/css/pages/authentication.css
@@ -3,7 +3,7 @@
 /*-------------------------*/
 
 .bg-authentication {
-  background-color: #F2F4F4;
+  background-color: #ffa51f;
 }
 
 .bg-authentication #icon-arrow {
